After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701974 - x11: trap errors when calling XIQueryDevice
x11: trap errors when calling XIQueryDevice
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: x11
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-06-11 01:45 UTC by Matthias Clasen
Modified: 2013-06-11 18:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
x11: trap errors when calling XIQueryDevice (2.85 KB, patch)
2013-06-11 01:45 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2013-06-11 01:45:46 UTC
Devices can disappear at any time, causing XIQueryDevice
to throw an error. At the same time, plug a memory leak.
Comment 1 Matthias Clasen 2013-06-11 01:45:48 UTC
Created attachment 246475 [details] [review]
x11: trap errors when calling XIQueryDevice
Comment 2 Matthias Clasen 2013-06-11 01:46:22 UTC
See https://bugzilla.redhat.com/show_bug.cgi?id=954054 for a stacktrace
Comment 3 Emmanuele Bassi (:ebassi) 2013-06-11 10:01:45 UTC
Review of attachment 246475 [details] [review]:

looks good. can you please commit it to both clutter-1.16 and clutter-1.14 branches?
Comment 4 Matthias Clasen 2013-06-11 16:02:08 UTC
Attachment 246475 [details] pushed as d343cc6 - x11: trap errors when calling XIQueryDevice